Fix EncounterTransaction to work with OpenMRS 1.10. Since we have to work with OpenMRS 1.9.4, we cannot use @OpenmrsProfile. We should change this when move on to support >1.9.7. Tests have not been added to run with OpenMRS 1.10. Not sure what is the best way to handle these. EncounterDrugOrderServiceHelper has been duplicated. Logic to consume revision, discontinue etc are not yet here. Once they are present, this class will look better. Slight changes to .gitignore so we do not have to specify target directories for every module in the project.